feat, refactor and style: allow only 4 (four) letters as username and add rocket sound effect

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ h2 {
 #nameField {
   color: var(--purple);
   text-align: center;
+  text-transform: uppercase;
 
   background: var(--white-purple);
   transition: transform 0.1s, box-shadow 0.1s;
