--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,6 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
-html {
-  min-height: 100vh;
-}
-
 #tela {
   display: block;
 
@@ -46,6 +42,11 @@ html {
   padding: min(75px, 7.5%);
   border: 4px solid var(--purple);
   box-shadow: 6px 6px 0 var(--dark-purple);
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   display: flex;
   align-items: center;
